--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -43,6 +43,10 @@
    
       }
 
+      &-separator {
+        margin: 1rem;
+      }
+
       &-design {
         &-author {
             color: $color-white;
