--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -30,7 +30,7 @@
 
             @media only screen and (max-width: 767px) {
                 display: block;
-                padding: 10px 0;
+                padding: 1rem 0;
                 
             }
         }
