--- a/sass/components/_mobilenav.scss
+++ b/sass/components/_mobilenav.scss
@@ -50,5 +50,10 @@
             padding: 1.7rem 0;
         }
     }
+
+    .navigation__item-img {
+        font-size: 0;
+        padding: 0;
+    }
     .navigation__image {display: none;}
 }
